--- a/public/parametrical.html
+++ b/public/parametrical.html
@@ -1,4 +1,90 @@
-(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require=="function"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error("Cannot find module '"+o+"'");throw f.code="MODULE_NOT_FOUND",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require=="function"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({1:[function(require,module,exports){
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>OPA!</title>
+    <style>html, body{
+  height: 100%;
+  cursor:pointer;
+}
+::-webkit-input-placeholder{
+    font-weight:900;
+}
+
+body, canvas, div{
+    margin:0px;
+    padding:0px;  
+    user-select: none;
+}
+
+textarea {
+    border-bottom-color: rgb(238, 238, 238);
+    border-bottom-style: inset;
+    border-bottom-width: 1.8181817531585693px;
+    border-left-color: rgb(238, 238, 238);
+    border-left-style: inset;
+    border-left-width: 1.8181817531585693px;
+    border-right-color: rgb(238, 238, 238);
+    border-right-style: inset;
+    border-right-width: 1.8181817531585693px;
+    border-top-color: rgb(238, 238, 238);
+    border-top-style: inset;
+    border-top-width: 1.8181817531585693px;
+  margin: 0;
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+}
+
+input{
+  width: 100%;
+  height: 100%;
+}
+
+label{
+  padding:0;
+  margin:0;
+  height:100%;
+  width:100%;
+}
+
+legend {
+  padding: 0 5px;
+  margin: 0 0 0 3px;
+}
+
+fieldset{
+}
+
+input[type=file]{
+  padding:5px 0px;
+}
+
+button {
+  margin: 0px
+}
+
+.w350{
+  display:inline-block;
+  width:350px
+}
+
+.w300{
+  max-width:300px
+}
+
+.h400{
+  min-height:300px
+}
+
+.m5{
+  margin: 5px
+}
+</style>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  </head>
+  <body>
+  </body>
+    <script type="text/javascript">(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require=="function"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error("Cannot find module '"+o+"'");throw f.code="MODULE_NOT_FOUND",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require=="function"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({1:[function(require,module,exports){
 module.exports = solver // takes a rayray of control points of n scale bezier curves
 
 function beezn(scale){
@@ -23721,3 +23807,5 @@ exports.createContext = Script.createContext = function (context) {
 };
 
 },{"indexof":118}]},{},[5]);
+</script>
+</html>
