--- a/module.html
+++ b/module.html
@@ -1,8 +1,4 @@
+<button id=play>play</button>
+<button id=rec>rec</button>
 <div class=module>
-  <div class=xy></div>
-  <div class=dial></div>
-  <div class=dial></div>
-  <div class=dial></div>
-  <div class=xy></div>
-  <div class=amod></div>
 </div>
